--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "eslint-fix": "eslint --fix --ext .js,.ts,.jsx,.tsx,.vue ./src"
   },
   "dependencies": {
-    "@element-plus/icons-vue": "^2.3.1",
     "@vueuse/core": "^10.6.1",
     "axios": "^1.6.2",
     "js-cookie": "^3.0.5",
@@ -36,6 +35,8 @@
     "@types/nprogress": "^0.2.3",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
+    "@vicons/ionicons4": "^0.12.0",
+    "@vicons/ionicons5": "^0.12.0",
     "@vitejs/plugin-vue": "^4.5.1",
     "eslint": "^8.55.0",
     "eslint-plugin-html": "^7.1.0",
