--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@vueuse/core": "^10.6.1",
     "axios": "^1.6.2",
+    "echarts": "^5.4.3",
     "js-cookie": "^3.0.5",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
