--- a/package.json
+++ b/package.json
@@ -38,7 +38,10 @@
     "@typescript-eslint/parser": "^5.62.0",
     "@vicons/ionicons4": "^0.12.0",
     "@vicons/ionicons5": "^0.12.0",
+    "@vicons/tabler": "^0.12.0",
     "@vitejs/plugin-vue": "^4.5.1",
+    "colord": "^2.9.3",
+    "crypto-js": "^4.2.0",
     "eslint": "^8.55.0",
     "eslint-plugin-html": "^7.1.0",
     "eslint-plugin-import": "^2.29.0",
