--- a/package.json
+++ b/package.json
@@ -17,43 +17,52 @@
     "serve": "vite --host",
     "build": "vite build",
     "preview": "vite preview",
+    "type-check": "vue-tsc --noEmit",
     "eslint-fix": "eslint --fix --ext .js,.ts,.jsx,.tsx,.vue ./src"
   },
   "dependencies": {
-    "@vueuse/core": "^10.6.1",
-    "axios": "^1.6.2",
-    "echarts": "^5.4.3",
+    "@iconify/vue": "^4.1.2",
+    "@vueuse/core": "^10.9.0",
+    "axios": "^1.7.1",
+    "echarts": "^5.5.0",
     "js-cookie": "^3.0.5",
+    "lodash-es": "^4.17.21",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
     "rollup-plugin-terser": "^7.0.2",
-    "vue": "^3.3.9",
-    "vue-router": "^4.2.5"
+    "unocss": "^0.58.9",
+    "vue": "^3.4.27",
+    "vue-draggable-plus": "^0.4.1",
+    "vue-router": "^4.3.2"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
-    "@types/node": "^20.10.3",
+    "@types/node": "^20.12.12",
     "@types/nprogress": "^0.2.3",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
+    "@unocss/preset-uno": "0.56.5",
+    "@unocss/transformer-directives": "0.56.5",
+    "@unocss/vite": "0.56.5",
+    "@vicons/carbon": "^0.12.0",
     "@vicons/ionicons4": "^0.12.0",
     "@vicons/ionicons5": "^0.12.0",
+    "@vicons/material": "^0.12.0",
     "@vicons/tabler": "^0.12.0",
-    "@vitejs/plugin-vue": "^4.5.1",
+    "@vitejs/plugin-vue": "^4.6.2",
     "colord": "^2.9.3",
     "crypto-js": "^4.2.0",
-    "eslint": "^8.55.0",
+    "eslint": "^8.57.0",
     "eslint-plugin-html": "^7.1.0",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-vue": "^9.19.2",
-    "naive-ui": "^2.35.0",
-    "sass": "^1.69.5",
-    "typescript": "^5.3.2",
-    "unocss": "^0.53.6",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-vue": "^9.26.0",
+    "naive-ui": "^2.38.2",
+    "sass": "^1.77.2",
+    "typescript": "^5.4.5",
     "unplugin-auto-import": "^0.16.7",
     "unplugin-vue-components": "^0.24.1",
-    "vite": "^4.5.0",
+    "vite": "^4.5.3",
     "vite-svg-loader": "^4.0.0",
-    "vue-tsc": "^1.8.24"
+    "vue-tsc": "^1.8.27"
   }
 }
