--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "unplugin-auto-import": "^0.16.7",
     "unplugin-vue-components": "^0.24.1",
     "vite": "^4.5.3",
+    "vite-plugin-mock": "^3.0.2",
     "vite-svg-loader": "^4.0.0",
     "vue-tsc": "^1.8.27"
   }
