--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,23 +16,28 @@ jobs:
 
       - name: Setup Node
         uses: actions/setup-node@v3
-        with: 
-          node-version: '18'
+        with:
+          node-version: '18'  # 你可以根据需要指定 Node.js 的版本
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4.0.0
         with:
-          version: '7.0.0'  # 指定要安装的 pnpm 版本
+          version: '8.7.1'  # 指定要安装的 pnpm 版本
           dest: '~/setup-pnpm'  # 可选，pnpm 文件存储路径，默认为 ~/setup-pnpm
-          run_install: 'true'  # 可选，是否运行 `pnpm install` 命令
+          run_install: 'false'  # 设置为 false，因为我们将在后面手动运行 pnpm install
           package_json_file: 'package.json'  # 可选，指定 package.json 文件路径
           standalone: 'false'  # 可选，是否安装 @pnpm/exe 以便在没有 Node.js 的情况下使用 pnpm
 
+      - name: Check pnpm version
+        run: pnpm -v  # 检查 pnpm 是否安装成功
+
       - name: Install dependencies
         run: pnpm install  # 使用 pnpm 安装依赖
+        working-directory: ./  # 确保在正确的目录下运行
 
       - name: Build project
         run: pnpm run build --base=./  # 使用 pnpm 运行构建命令
+        working-directory: ./  # 确保在正确的目录下运行
 
       - name: Upload production-ready build files
         uses: actions/upload-artifact@v3
