--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,27 +17,27 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: '18'  # 你可以根据需要指定 Node.js 的版本
+          node-version: '18'
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4.0.0
         with:
-          version: '8.7.1'  # 指定要安装的 pnpm 版本
-          dest: '~/setup-pnpm'  # 可选，pnpm 文件存储路径，默认为 ~/setup-pnpm
-          run_install: 'false'  # 设置为 false，因为我们将在后面手动运行 pnpm install
-          package_json_file: 'package.json'  # 可选，指定 package.json 文件路径
-          standalone: 'false'  # 可选，是否安装 @pnpm/exe 以便在没有 Node.js 的情况下使用 pnpm
+          version: '8.7.1'
+          dest: '~/setup-pnpm'
+          run_install: 'false'
+          package_json_file: 'package.json'
+          standalone: 'false'
 
       - name: Check pnpm version
-        run: pnpm -v  # 检查 pnpm 是否安装成功
+        run: pnpm -v
 
       - name: Install dependencies
-        run: pnpm install  # 使用 pnpm 安装依赖
-        working-directory: ./  # 确保在正确的目录下运行
+        run: pnpm install
+        working-directory: ./
 
       - name: Build project
-        run: pnpm run build --base=./  # 使用 pnpm 运行构建命令
-        working-directory: ./  # 确保在正确的目录下运行
+        run: pnpm run build --base=./
+        working-directory: ./
 
       - name: Upload production-ready build files
         uses: actions/upload-artifact@v3
@@ -59,7 +59,8 @@ jobs:
           path: ./dist
 
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+        uses: JamesIves/github-pages-deploy-action@v4.6.3
         with:
-          github_token: ${{ secrets.VUE3_NAIVE_TS_TOKEN }}
-          publish_dir: ./dist
+          token: ${{ secrets.VUE3_NAIVE_TS_TOKEN }}
+          branch: gh-pages
+          folder: dist
