--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,26 +17,19 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: '18'  # 根据需要指定 Node.js 版本
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4.0.0
         with:
-          version: '8.7.1'
-          dest: '~/setup-pnpm'
-          run_install: 'false'
-          package_json_file: 'package.json'
-          standalone: 'false'
-
-      - name: Check pnpm version
-        run: pnpm -v
+          version: '8.7.1'  # 指定要安装的 pnpm 版本
 
       - name: Install dependencies
-        run: pnpm install
+        run: pnpm install  # 使用 pnpm 安装依赖
         working-directory: ./
 
       - name: Build project
-        run: pnpm run build --base=./
+        run: pnpm run build --base=./  # 使用 pnpm 运行构建命令
         working-directory: ./
 
       - name: Upload production-ready build files
@@ -62,8 +55,7 @@ jobs:
           path: ./dist
 
       - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@v4.6.3
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          token: ${{ secrets.VUE3_NAIVE_TS_TOKEN }}
-          branch: gh-pages
-          folder: dist
+          github_token: ${{ secrets.VUE3_NAIVE_TS_TOKEN }}
+          publish_dir: ./dist
