--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@iconify/vue": "^4.1.2",
     "@vueuse/core": "^10.9.0",
     "axios": "^1.7.1",
+    "code-inspector-plugin": "^0.20.7",
     "echarts": "^5.5.0",
     "js-cookie": "^3.0.5",
     "lodash-es": "^4.17.21",
